# Ollama-GraphRAG-App

./: README.md  pyproject.toml
src/: app.py
